--- a/css/scss/partials/components/_squishy-header.scss
+++ b/css/scss/partials/components/_squishy-header.scss
@@ -4,6 +4,7 @@
 		z-index: 2;
 		position:fixed;
 		top:0;
+		transition:all $speed ease-in-out;
 		> div {
 			max-width: $width + $padding*2;
 			height:20vh;
